changed to checked system from radio

--- a/SpotifyDjango/SpotifyPlaylist/templates/index.html
+++ b/SpotifyDjango/SpotifyPlaylist/templates/index.html
@@ -153,17 +153,17 @@
               <div class="text-center">
                 <div class="btn-group" role="group">
 
-                  <input type="hidden" class="btn-check" name="valance_l" value="0">
-                  <input type="checkbox" class="btn-check" name="valance_l" id="valance2" value="1">
-                  <label class="btn btn-outline-success" for="valance2">Low</label>
+                  <input type="hidden" class="btn-check" name="valence_l" value="0">
+                  <input type="checkbox" class="btn-check" name="valence_l" id="valence2" value="1">
+                  <label class="btn btn-outline-success" for="valence2">Low</label>
                 
-                  <input type="hidden" class="btn-check" name="valance_m" value="0">
-                  <input type="checkbox" class="btn-check" name="valance_m" id="valance3" value="1">
-                  <label class="btn btn-outline-warning" for="valance3">Medium</label>
+                  <input type="hidden" class="btn-check" name="valence_m" value="0">
+                  <input type="checkbox" class="btn-check" name="valence_m" id="valence3" value="1">
+                  <label class="btn btn-outline-warning" for="valence3">Medium</label>
                 
-                  <input type="hidden" class="btn-check" name="valance_h" value="0">
-                  <input type="checkbox" class="btn-check" name="valance_h" id="valance4" value="1">
-                  <label class="btn btn-outline-danger" for="valance4">High</label>
+                  <input type="hidden" class="btn-check" name="valence_h" value="0">
+                  <input type="checkbox" class="btn-check" name="valence_h" id="valence4" value="1">
+                  <label class="btn btn-outline-danger" for="valence4">High</label>
 
                 </div>
               </div>  
