added functionality for other users

--- a/templates/select.html
+++ b/templates/select.html
@@ -267,9 +267,12 @@
         </div>
         <div class="col-4"></div>
       </div>
+
+      <input type="text" name="code" value="{{code}}" hidden>
     </form>
 
 
+    
     
  
   </div>
