--- a/templates/select.html
+++ b/templates/select.html
@@ -12,11 +12,7 @@
 </head>
 <body>
     
-  <!-- <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Create a Playlist</span>
-    </div>
-  </nav> -->
+
   <div class="text-center mt-4 mb-3">
     <h1><strong>Create a Spotify Playlist</strong></h1>
   </div>
@@ -29,7 +25,7 @@
           <div class="card-body">
             
             <h5>Select one or muliple ranges for each attribute below</h5>
-            <h5>The resulting playlist will include tracks that fall into the ranges specified</h5>
+            <h5>The resulting playlist will include tracks from your library that fall into the ranges specified</h5>
             
           </div>
         </div>
@@ -46,7 +42,6 @@
               <h5>How Danceable?</h5>
             </div>
             <div class="card-body">
-              <!-- <p class="card-text"> A measure of how suitable a track is for dancing</p> -->
               <div class="text-center">
                 <div class="btn-group" role="group">
                   
@@ -74,8 +69,6 @@
               <h5>How Energetic?</h5>
             </div>
             <div class="card-body">
-              <!-- <h5 class="card-title">How Energetic?</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
               <div class="text-center">
                 <div class="btn-group" role="group">
 
@@ -194,8 +187,6 @@
             <div class="card-body">
               <div class="text-center">
                 <div class="btn-group" role="group">
-                  <!-- <input type="radio" class="btn-check" name="length" id="length1" value="n" checked>
-                  <label class="btn btn-outline-primary" for="length1">No Pref.</label> -->
 
                   <input type="hidden" class="btn-check" name="length_l" value="0">
                   <input type="checkbox" class="btn-check" name="length_l" id="length2" value="1">
@@ -233,7 +224,6 @@
                 </div>
                 <div class="col-6">
                   <label for="playlistLength" class="form-label"><strong>Max Playlist Length (# of tracks)</strong></label>
-                  <!-- <input class="form-control" type="number" id="PlaylistLength" placeholder="" min="0" max="50" name="name" oninput="validity.valid||(value='');" required> -->
                   <div class="btn-group" role="group">
 
                     
