--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=0.35">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <title>Create Spotify Playlist</title>
   <style>
@@ -11,9 +11,244 @@
   </style>
 </head>
 <body>
+    <div class="text-center mt-4 mb-3">
+        <h1><strong>Create a Spotify Playlist</strong></h1>
+      </div>
+    
+      <div class="container-fluid">
+        <div class="row text-center">
+          <div class="col-3"></div>
+          <div class="col-6">
+            <div class="card">
+              <div class="card-body">
+                
+                <h5>Select one or muliple ranges for each attribute below</h5>
+                <h5>The resulting playlist will include tracks from your library that fall into the ranges specified</h5>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+        
+
+        <div class="row mt-2">
+            <div class="col-3"></div>
+            <div class="col-3">
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5>How Danceable?</h5>
+                </div>
+                <div class="card-body">
+                  <div class="text-center">
+                    <div class="btn-group" role="group">
+                      
+                      <input type="hidden" class="btn-check" name="dance_l" value="0">
+                      <input type="checkbox" class="btn-check" name="dance_l" id="dance2" value="1" disabled>
+                      <label class="btn btn-outline-success" for="dance2">Low</label>
+                    
+                      <input type="hidden" class="btn-check" name="dance_m" value="0">
+                      <input type="checkbox" class="btn-check" name="dance_m" id="dance3" value="1" disabled> 
+                      <label class="btn btn-outline-warning" for="dance3">Medium</label>
+    
+                      <input type="hidden" class="btn-check" name="dance_h"  value="0">
+                      <input type="checkbox" class="btn-check" name="dance_h" id="dance4" value="1" disabled>
+                      <label class="btn btn-outline-danger" for="dance4">High</label>
+    
+                    </div>
+                  </div>  
+                </div>
+              </div>
+            </div>
+    
+            <div class="col-3">
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5>How Energetic?</h5>
+                </div>
+                <div class="card-body">
+                  <div class="text-center">
+                    <div class="btn-group" role="group">
+    
+                      <input type="hidden" class="btn-check" name="energy_l" value="0">
+                      <input type="checkbox" class="btn-check" name="energy_l" id="energy2" value="1" disabled>
+                      <label class="btn btn-outline-success" for="energy2">Low</label>
+                      
+                      <input type="hidden" class="btn-check" name="energy_m" value="0">
+                      <input type="checkbox" class="btn-check" name="energy_m" id="energy3" value="1" disabled>
+                      <label class="btn btn-outline-warning" for="energy3">Medium</label>
+                    
+                      <input type="hidden" class="btn-check" name="energy_h" value="0">
+                      <input type="checkbox" class="btn-check" name="energy_h" id="energy4" value="1" disabled>
+                      <label class="btn btn-outline-danger" for="energy4">High</label>
+    
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+    
+          <div class="row mt-2"></div>
+          <div class="col-3"></div>
+            <div class="col-3">
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5>How Acoustic?</h5>
+                </div>
+                <div class="card-body">
+                  <div class="text-center">
+                    <div class="btn-group" role="group">
+    
+                      <input type="hidden" class="btn-check" name="acoustic_l" value="0">
+                      <input type="checkbox" class="btn-check" name="acoustic_l" id="acoustic2" value="1" disabled>
+                      <label class="btn btn-outline-success" for="acoustic2">Low</label>
+                    
+                      <input type="hidden" class="btn-check" name="acoustic_m" value="0">
+                      <input type="checkbox" class="btn-check" name="acoustic_m" id="acoustic3" value="1" disabled>
+                      <label class="btn btn-outline-warning" for="acoustic3">Medium</label>
+                    
+                      <input type="hidden" class="btn-check" name="acoustic_h" value="0">
+                      <input type="checkbox" class="btn-check" name="acoustic_h" id="acoustic4" value="1" disabled>
+                      <label class="btn btn-outline-danger" for="acoustic4">High</label>
+    
+                    </div>
+                  </div>  
+                </div>
+              </div>
+            </div>
+    
+            <div class="col-3">
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5>How Instrumental?</h5>
+                </div>
+                <div class="card-body">
+                  <div class="text-center">
+                    <div class="btn-group" role="group">
+                      
+                      <input type="hidden" class="btn-check" name="instrument_l" value="0">
+                      <input type="checkbox" class="btn-check" name="instrument_l" id="instrument2" value="1" disabled>
+                      <label class="btn btn-outline-success" for="instrument2">Low</label>
+                    
+                      <input type="hidden" class="btn-check" name="instrument_m" value="0">
+                      <input type="checkbox" class="btn-check" name="instrument_m" id="instrument3" value="1" disabled>
+                      <label class="btn btn-outline-warning" for="instrument3">Medium</label>
+                    
+                      <input type="hidden" class="btn-check" name="instrument_h" value="0">
+                      <input type="checkbox" class="btn-check" name="instrument_h" id="instrument4"value="1" disabled>
+                      <label class="btn btn-outline-danger" for="instrument4">High</label>
+    
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+    
+            
+          </div>
+    
+          <div class="row mt-2">
+    
+            <div class="col-3"></div>
+            <div class="col-3">
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5>How Cheerful?</h5>
+                </div>
+                <div class="card-body">
+                  <div class="text-center">
+                    <div class="btn-group" role="group">
+    
+                      <input type="hidden" class="btn-check" name="valence_l" value="0">
+                      <input type="checkbox" class="btn-check" name="valence_l" id="valence2" value="1" disabled>
+                      <label class="btn btn-outline-success" for="valence2">Low</label>
+                    
+                      <input type="hidden" class="btn-check" name="valence_m" value="0">
+                      <input type="checkbox" class="btn-check" name="valence_m" id="valence3" value="1" disabled>
+                      <label class="btn btn-outline-warning" for="valence3">Medium</label>
+                    
+                      <input type="hidden" class="btn-check" name="valence_h" value="0">
+                      <input type="checkbox" class="btn-check" name="valence_h" id="valence4" value="1" disabled>
+                      <label class="btn btn-outline-danger" for="valence4">High</label>
+    
+                    </div>
+                  </div>  
+                </div>
+              </div>
+            </div>
+    
+            <div class="col-3">
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5>Song Length?</h5>
+                </div>
+                <div class="card-body">
+                  <div class="text-center">
+                    <div class="btn-group" role="group">
+    
+                      <input type="hidden" class="btn-check" name="length_l" value="0">
+                      <input type="checkbox" class="btn-check" name="length_l" id="length2" value="1" disabled>
+                      <label class="btn btn-outline-success" for="length2">Short</label>
+                    
+                      <input type="hidden" class="btn-check" name="length_m" value="0">
+                      <input type="checkbox" class="btn-check" name="length_m" id="length3" value="1" disabled>
+                      <label class="btn btn-outline-warning" for="length3">Medium</label>
+                    
+                      <input type="hidden" class="btn-check" name="length_h" value="0">
+                      <input type="checkbox" class="btn-check" name="length_h" id="length4" value="1" disabled> 
+                      <label class="btn btn-outline-danger" for="length4">Long</label>
+    
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+    
+            
+          </div>
+    
+    
+          
+          <div class="row mt-3 text-center">
+            <div class="col-3"></div>
+            <div class="col-6">
+              <div class="card">
+                
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-6">
+                      <label for="playlistName" class="form-label"><strong>Playlist Name</strong></label>
+                      <input class="form-control" type="text" placeholder="" name="name" id="playlistName" required disabled>
+                    </div>
+                    <div class="col-6">
+                      <label for="playlistLength" class="form-label"><strong>Max Playlist Length (# of tracks)</strong></label>
+                      <div class="btn-group" role="group">
+    
+                        
+                        <input type="radio" class="btn-check" name="playlistLength" id="length10" value="20" checked disabled>
+                        <label class="btn btn-outline-secondary" for="length10">20</label>
+                      
+                        <input type="radio" class="btn-check" name="playlistLength" id="length20" value="40" disabled>
+                        <label class="btn btn-outline-secondary" for="length20">40</label>
+                        
+                        <input type="radio" class="btn-check" name="playlistLength" id="length30" value="60" disabled>
+                        <label class="btn btn-outline-secondary" for="length30">60</label>
+    
+                        <input type="radio" class="btn-check" name="playlistLength" id="length40" value="80" disabled>
+                        <label class="btn btn-outline-secondary" for="length40">80</label>
+    
+                        <input type="radio" class="btn-check" name="playlistLength" id="length50" value="100" disabled>
+                        <label class="btn btn-outline-secondary" for="length50">100</label>
+      
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
     <div class="text-center mt-4 mb-3">
-        <h1><strong>Please Login to Your Spotify Account</strong></h1>
+        <h4><strong>Please Login to Your Spotify Account to Proceed</strong></h4>
     </div>
     
     <div class="container-fluid">
