--- a/templates/login.html
+++ b/templates/login.html
@@ -22,8 +22,23 @@
             <div class="card">
               <div class="card-body">
                 
-                <h5>Select one or muliple ranges for each attribute below</h5>
-                <h5>The resulting playlist will include tracks from your library that fall into the ranges specified</h5>
+                <div class="text-center mb-3">
+                    <h4><strong>Please Login to Your Spotify Account to Proceed</strong></h4>
+                </div>
+                
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-4">
+            
+                        </div>
+                        <div class="col-4 text-center">
+                            <a class="btn btn-dark" type="submit" id="submitBtn" href="/auth">Log In</a>
+                        </div>
+                        <div class="col-4">
+                            
+                        </div>
+                    </div>
+                </div>
                 
               </div>
             </div>
@@ -247,23 +262,7 @@
             </div>
           </div>
 
-    <div class="text-center mt-4 mb-3">
-        <h4><strong>Please Login to Your Spotify Account to Proceed</strong></h4>
-    </div>
-    
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-4">
 
-            </div>
-            <div class="col-4 text-center">
-                <a class="btn btn-dark" type="submit" id="submitBtn" href="/auth">Log In</a>
-            </div>
-            <div class="col-4">
-                
-            </div>
-        </div>
-    </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
